--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=VideoprojektMain
-spring.datasource.username=root
-spring.datasource.password=6128-Tureby
-spring.datasource.url=jdbc:mysql://localhost:3306/bilprojekt
+spring.datasource.username=frha0006
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=${JDBC_DATABASE_URL}
