--- a/.github/workflows/master_frha0006.yml
+++ b/.github/workflows/master_frha0006.yml
@@ -14,6 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
+    env:
+      DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+      JDBC_DATABASE_URL: ${{ secrets.JDBC_DATABASE_URL }}
 
     steps:
       - uses: actions/checkout@v4
